footer on all pages

--- a/index.html
+++ b/index.html
@@ -971,8 +971,7 @@
     <!-- FOOTER -->
     <footer
       id="siteFooter"
-      class="py-5 bg-bright-gray"
-    >
+      class="py-5 bg-bright-gray">
       <div class="container">
         <div class="row">
           <div class="col-12">
