sign up decoration

--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
           </div>
         </div>
       </div>
+      <div class="py-5 spacer"></div>
     </section>
 
     <!-- SIGN UP -->
@@ -350,8 +351,9 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2 class="white">
-              SIGN ME UP FOR RELEASE UPDATES
+            <h2 class="white d-flex justify-content-center">
+              <div class="position-relative"><img src="img/letter.png" alt="Sign Up" class="position-absolute letter"></div>
+              <span>SIGN ME UP FOR RELEASE UPDATES</span>
             </h2>
             <div class="mktoFormWrapper">
               <!-- FOOTER FORM HERE -->
