--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
               id="headerNav"
             >
               <a
+                href="#signUp"
+                class="btn subscribe-btn"
+              >
+                Subscribe
+              </a>
+              <a
                 href="https://github.com/conan-io/conan"
                 class="btn bg-bright-gray"
               >
