gocenter target blanked

--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -61,7 +61,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <a href="https://blog.conan.io/" class="btn bg-bright-gray black">
             Blog
           </a>
-          <a href="https://conan.io/center/" class="btn bg-blue white">
+          <a href="https://conan.io/center/" class="btn bg-blue white" target="_blank">
             <img src="img/small-search.png" alt="Search"> Conan-Center
           </a>
         </nav>
