--- a/downloads.html
+++ b/downloads.html
@@ -91,9 +91,11 @@
                 Blog
               </a>
               <a href="https://conan.io/center/"
-                 class="btn bg-blue white">
+                 class="btn bg-blue white"
+                 target="_blank">
                 <img src="img/small-search.png"
-                     alt="Search"> Conan-Center
+                     alt="Search">
+                 Conan-Center
               </a>
             </nav>
 
