changed default selection of debian and rpm

--- a/downloads.html
+++ b/downloads.html
@@ -444,21 +444,21 @@ yum update && yum install jfrog-artifactory-cpp-ce
                       <div class="cn-box cn-main cn-dropdown">
                         <div class="dropdown">
                           <button class="btn dropdown-toggle" type="button" id="dropdownMenuButtonRPM" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Copy install command
+                            RPM Installer
                           </button>
                           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item dropdown-item-copy">
-                              Copy install command
-                            </a>
                             <a class="dropdown-item dropdown-item-download">
                               RPM Installer
+                            </a>
+                            <a class="dropdown-item dropdown-item-copy">
+                              Copy install command
                             </a>
                           </div>
                         </div>
                       </div>
                       <!-- ACTION -->
-                      <a class="cn-box cn-action cn-copy-multiline"
-                         href="#"
+                      <a class="cn-box cn-action cn-download"
+                         href="https://dl.bintray.com/conan/installers/conan-win-32_1_22_3.exe"
                          data-href="https://dl.bintray.com/conan/installers/conan-win-32_1_22_3.exe"
                          data-copy-target="textarea#artiRpm">
                       </a>
@@ -485,21 +485,21 @@ sudo apt-get install jfrog-artifactory-cpp
                   <div class="cn-box cn-main cn-dropdown">
                     <div class="dropdown">
                       <button class="btn dropdown-toggle" type="button" id="dropdownMenuButtonDebian" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Copy install command
+                        Debian Installer
                       </button>
                       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item dropdown-item-copy">
-                          Copy install command
-                        </a>
                         <a class="dropdown-item dropdown-item-download">
                           Debian Installer
+                        </a>
+                        <a class="dropdown-item dropdown-item-copy">
+                          Copy install command
                         </a>
                       </div>
                     </div>
                   </div>
                   <!-- ACTION -->
-                  <a class="cn-box cn-action cn-copy-multiline"
-                     href="#"
+                  <a class="cn-box cn-action cn-download"
+                     href="https://releases.jfrog.io/artifactory/artifactory-pro-debs/pool/jfrog-artifactory-pro/jfrog-artifactory-pro-[RELEASE].deb"
                      data-href="https://releases.jfrog.io/artifactory/artifactory-pro-debs/pool/jfrog-artifactory-pro/jfrog-artifactory-pro-[RELEASE].deb"
                      data-copy-target="textarea#artiDebian">
                   </a>
