--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                   platforms and build systems.
                 </p>
                 <a
-                  href="https://docs.conan.io/"
+                  href="https://docs.conan.io/en/latest/introduction.html"
                   class="big-btn bg-blue white"
                 >
                   Learn More >
