--- a/downloads.html
+++ b/downloads.html
@@ -491,7 +491,7 @@ sudo apt-get install jfrog-artifactory-cpp
                          data-copy-value="docker run --name artifactory -d -p 8081:8081 -p 8082:8082 docker.bintray.io/jfrog/artifactory-cpp-ce:latest">
                       </a>
                       <div class="d-none" id="dockerCommand">
-                        docker run --name artifactory -d -p 8081:8081 -p 8082:8082 docker.bintray.io/jfrog/artifactory-cpp-ce:latest
+                        docker run --name artifactory -d -p 8081:8081 -p 8082:8082 releases-docker.jfrog.io/jfrog/artifactory-cpp-ce:latest
                       </div>
                     </div>
                     <!-- / DOKCER -->
